--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Liu Haitian <wantedliu@gmail.com>",
   "dependencies": {
+    "a11y-react-emoji": "^1.1.3",
     "gatsby": "^3.4.1",
     "gatsby-plugin-feed": "^3.4.0",
     "gatsby-plugin-gatsby-cloud": "^2.4.1",
